--- a/ctf/2020_ACICTF_Cyber_Stakes.html
+++ b/ctf/2020_ACICTF_Cyber_Stakes.html
@@ -1,1 +1,4 @@
-2020 ACICTF Cyber Stakes
+# 2020 ACICTF Cyber Stakes
+
+## Crypto:
+[Over Time: Paid - 50](https://rbf-shadowhunter.github.io/ctf/2020_ACICTF_Cyber_Stakes/overtimepaid.html)
