--- a/ctf/2020_ACICTF_Cyber_Stakes.html
+++ b/ctf/2020_ACICTF_Cyber_Stakes.html
@@ -1,7 +1,7 @@
 ---
 title: "RBF-Shadowhunter"
 layout: template
-filename: index.md
+filename: 2020_ACICTF_Cyber_Stakes.md
 ---
 
 # 2020 ACICTF Cyber Stakes
