--- a/ctf/2020_ACICTF_Cyber_Stakes/overtimepaid.html
+++ b/ctf/2020_ACICTF_Cyber_Stakes/overtimepaid.html
@@ -1,10 +1,11 @@
 ---
-title: "Over Time: Paid - 50"
+title: "[50] Over Time: Paid (Cryptography)"
 layout: template
 filename: overtimepaid.md
 ---
 
-## [50] Over Time: Paid
+## [50] Over Time: Paid (Cryptography)
+
 ### Prompt:
 
 After many months of hard work by our agents, we've gained access to a sensitive payroll document from a competitor. Unfortunately, it looks heavily encrypted. document.encrypted source.py
