--- a/ctf/2020_ACICTF_Cyber_Stakes.html
+++ b/ctf/2020_ACICTF_Cyber_Stakes.html
@@ -1,10 +1,13 @@
 ---
-title: "RBF-Shadowhunter"
+title: "2020 ACICTF Cyber Stakes"
 layout: template
 filename: 2020_ACICTF_Cyber_Stakes.md
 ---
 
 # 2020 ACICTF Cyber Stakes
 
-## Crypto:
+## Cryptography:
 [Over Time: Paid - 50](https://rbf-shadowhunter.github.io/ctf/2020_ACICTF_Cyber_Stakes/overtimepaid.html)
+
+## Miscellaneous:
+[All Your Base Are Belong To Us - 50](https://rbf-shadowhunter.github.io/ctf/2020_ACICTF_Cyber_Stakes/allyourbase.html)
