--- a/ctf/2021_DEFCON_QUALS/qoo-or-ooo/qoo-or-ooo.html
+++ b/ctf/2021_DEFCON_QUALS/qoo-or-ooo/qoo-or-ooo.html
@@ -13,16 +13,11 @@ qoo-or-ooo.challenges.ooo 5000
 
 Files:
 
-[backend.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/backend.py) f34c0ad16638ed67930893b8fc61abc50b98c8b00d761766cc8afb3525ae6a4d
--
-[coin.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/coin.py) 4e812503ab73aaf7dd66e6302e01202845f8f1307232761f03baedbe3bc34cba
--
-[game.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/game.py) 3d9158498c4272761e82e6f9fa9192cfa884d3d350ec01a2bb3873e46b0e3058
--
-[players.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/players.py) 635db715b498511ebaf305a242cd3ca095235813189be095734721f64d568f12
--
-[service.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/service.py) ff1f96ec1158cc9118ba0fad9142f18f92ed288b9659b1826d1006c1a2c26ff2
--
+-[backend.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/backend.py) f34c0ad16638ed67930893b8fc61abc50b98c8b00d761766cc8afb3525ae6a4d
+-[coin.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/coin.py) 4e812503ab73aaf7dd66e6302e01202845f8f1307232761f03baedbe3bc34cba
+-[game.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/game.py) 3d9158498c4272761e82e6f9fa9192cfa884d3d350ec01a2bb3873e46b0e3058
+-[players.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/players.py) 635db715b498511ebaf305a242cd3ca095235813189be095734721f64d568f12
+-[service.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/service.py) ff1f96ec1158cc9118ba0fad9142f18f92ed288b9659b1826d1006c1a2c26ff2
 
 
 ### Initial Analysis:
@@ -176,10 +171,8 @@ Quick aside: while I was compiling this write-up, I was tempted to clean up my i
 
 Interacting with the server is a dance, so you'll need to build a socketing program that keeps the connection open after one interaction.  Not only that, the program must be ready to write the results to an output file.  This is good practice to avoid those moments when you can't scroll any higher in your terminal or you need more efficient access to the information.
 
-[interact.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/interact.py)
--
-[output.txt](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/output.txt)
--
+-[interact.py](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/interact.py)
+-[output.txt](https://rbf-shadowhunter.github.io/ctf/2021_DEFCON_QUALS/qoo-or-ooo/output.txt)
 
 One hint for any CTF is to ensure you can always access the challenge by hostname, as IP's can change.  See the line in interact.py `IPADDR = socket.gethostbyname('qoo-or-ooo.challenges.ooo')`.
 
