DEFCON 21 Update to back-to-qoo 1

--- a/ctf/2021_DEFCON_QUALS/back-to-qoo/back-to-qoo.html
+++ b/ctf/2021_DEFCON_QUALS/back-to-qoo/back-to-qoo.html
@@ -1,10 +1,10 @@
 ---
-title: "BACK-TO-QOO?"
+title: "BACK-TO-QOO"
 layout: template
 filename: back-to-qoo.md
 ---
 
-## BACK TO QOO?
+## BACK TO QOO
 
 ### Prompt:
 You are pulled back to QOO again. QOO or OOO? Whatever.
